--- a/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/components/built-in-str-dir/built-in-str-dir.component.html
+++ b/AngularDev/Angular-Simplilearn/my-shiny-new-angular-app/src/app/components/built-in-str-dir/built-in-str-dir.component.html
@@ -7,3 +7,9 @@
 </div>
 <hr>
 <button class="btn btn-primary" (click)="showList = !showList">Toggle List Visibility</button>
+<hr>
+<h4>
+  PIPES.
+</h4>
+<!--Using Angular pipes to decorate output.-->
+Date pipe: {{dateToday | date}}
