--- a/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
+++ b/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
@@ -1,1 +1,20 @@
-<p>sales-person-list works!</p>
+<table border="1" class="table table-bordered table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Sales Volume</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor=" let tempSalesPerson of SalesPersonList">
+      <td>{{tempSalesPerson.firstName}} </td>
+      <td>{{tempSalesPerson.lastName}} </td>
+      <td>{{tempSalesPerson.email}} </td>
+      <td>{{tempSalesPerson.salesVolume}} </td>
+
+    </tr>
+
+  </tbody>
+</table>
