--- a/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
+++ b/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor=" let tempSalesPerson of SalesPersonList">
+    <tr *ngFor=" let tempSalesPerson of salesPersonList">
       <td>{{tempSalesPerson.firstName}} </td>
       <td>{{tempSalesPerson.lastName}} </td>
       <td>{{tempSalesPerson.email}} </td>
