--- a/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
+++ b/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
@@ -1,10 +1,11 @@
-<table border="1" class="table table-bordered table-striped">
-  <thead class="thead-dark">
+<table class="table table-bordered table-striped">
+  <thead class="table-dark">
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
       <th>Email</th>
       <th>Sales Volume</th>
+      <th>Met Quota?</th>
     </tr>
   </thead>
   <tbody>
@@ -13,7 +14,10 @@
       <td>{{tempSalesPerson.lastName}} </td>
       <td>{{tempSalesPerson.email}} </td>
       <td>{{tempSalesPerson.salesVolume}} </td>
-
+      <td>
+        <div *ngIf="tempSalesPerson.salesVolume > 60000; else myElseBlock">Yes</div>
+        <ng-template #myElseBlock>No</ng-template>
+      </td>
     </tr>
 
   </tbody>
