--- a/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
+++ b/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
@@ -13,9 +13,9 @@
       <td>{{tempSalesPerson.firstName}} </td>
       <td>{{tempSalesPerson.lastName}} </td>
       <td>{{tempSalesPerson.email}} </td>
-      <td>{{tempSalesPerson.salesVolume}} </td>
+      <td>{{tempSalesPerson.salesVolume | currency: 'UGX'}} </td>
       <td>
-        <div *ngIf="tempSalesPerson.salesVolume > 60000; else myElseBlock">Yes</div>
+        <div *ngIf="tempSalesPerson.salesVolume >= 60000; else myElseBlock">Yes</div>
         <ng-template #myElseBlock>No</ng-template>
       </td>
     </tr>
