--- a/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
+++ b/AngularDev/angular-app-ng/src/app/sales-person-list/sales-person-list.component.html
@@ -9,13 +9,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor=" let tempSalesPerson of salesPersonList">
+    <tr *ngFor="let tempSalesPerson of salesPersonList">
       <td>{{tempSalesPerson.firstName}} </td>
       <td>{{tempSalesPerson.lastName}} </td>
       <td>{{tempSalesPerson.email}} </td>
       <td>{{tempSalesPerson.salesVolume | currency: 'UGX'}} </td>
       <td>
-        <div *ngIf="tempSalesPerson.salesVolume >= 60000; else myElseBlock">Yes</div>
+        <div *ngIf="tempSalesPerson.salesVolume >= 60000; else myElseBlock"
+          [ngClass]="{'highlight': tempSalesPerson.salesVolume >= 60000}">Yes</div>
         <ng-template #myElseBlock>No</ng-template>
       </td>
     </tr>
