--- a/WAP/W1D2/flexing-nav-bar/css/style.css
+++ b/WAP/W1D2/flexing-nav-bar/css/style.css
@@ -13,7 +13,13 @@ html {
 
 body {
   font-family: 'Press Start 2P', sans-serif;
-  /* background-color: #60b347; */
+  background-color: #60b347;
+}
+
+.container {
+  max-width: 1080px;
+  width: 98%;
+  margin: auto;
 }
 
 .nav {
@@ -21,7 +27,7 @@ body {
   justify-content: space-between;
   background-color: #333;
   padding: 30px;
-  margin: 10px;
+  margin: 10px auto;
 }
 
 .links {
@@ -37,4 +43,13 @@ body {
 .nav a:hover {
   color: blue;
   background-color: red;
+  border-radius: 40%;
+}
+
+.nav a:visited {
+  color: rgb(138, 169, 138);
+}
+
+.nav a:active {
+  color: #fff;
 }
