--- a/WAP/W1D2/box-model-2/css/style.css
+++ b/WAP/W1D2/box-model-2/css/style.css
@@ -22,7 +22,6 @@ body {
 }
 
 .thumbnail {
-  padding: 5px;
   margin: 5px;
 }
 
@@ -38,6 +37,7 @@ h3 {
 .myImage {
   width: 300px;
   height: 60px;
+  object-fit: cover;
 }
 .in--between-1 {
   margin: 10px;
