--- a/CSSAnimation/car-bike/css/style.css
+++ b/CSSAnimation/car-bike/css/style.css
@@ -15,24 +15,52 @@ body {
   height: 100vh;
 }
 
-.background {
+.scene {
+  position: relative;
+  overflow: hidden;
   height: 100vh;
   background-image: url('../images/bg.jpg');
   background-position: bottom left;
   animation: driving 20s linear infinite;
 }
 
-.car {
+.sun {
   position: absolute;
-  left: 30rem;
-  bottom: -5rem;
-  width: 20rem;
+  top: 2rem;
+  left: 55%;
+  width: 3rem;
+  height: 3rem;
+  background: #ffffff;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 0 5rem #ffffff;
+  cursor: pointer;
+  transition: 0.2s;
+  z-index: 1;
+}
+
+.car1 {
+  position: absolute;
+  bottom: 0rem;
+  max-width: 20rem;
+  left: -20rem;
+  z-index: 1;
+  animation: car1 18s linear infinite;
+}
+
+.car2 {
+  position: absolute;
+  bottom: 0rem;
+  max-width: 20rem;
+  right: -20rem;
+  z-index: 1;
+  animation: car2 12s linear infinite;
 }
 
 .motobike {
   position: absolute;
-  left: 70rem;
-  bottom: 5.5rem;
+  left: 90rem;
+  bottom: 7rem;
   width: 15rem;
 }
 
@@ -159,32 +187,95 @@ h2 span {
 
 .box {
   position: relative;
-  width: 600px;
-  height: 150px;
+  width: 60rem;
+  height: 9rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2rem;
 }
 
 h3 {
   color: #fff;
-  font-size: 2em;
+  font-size: 2.5em;
   font-weight: 600;
   letter-spacing: 0.1em;
-  text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
-    0 0 80px #00b3ff, 0 0 120px #00b3ff;
+  text-shadow: 0 0 1rem #00b3ff, 0 0 2rem #00b3ff, 0 0 4rem #00b3ff,
+    0 0 8rem #00b3ff, 0 0 12rem #00b3ff;
 }
 
-/* .lightbar {
+.lightbar {
   position: absolute;
   top: 0;
   left: 0;
-  width: 10px;
+  width: 1rem;
   height: 100%;
   background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
-    0 0 80px #00b3ff, 0 0 120px #00b3ff;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem #00b3ff, 0 0 2rem #00b3ff, 0 0 4rem #00b3ff,
+    0 0 8rem #00b3ff, 0 0 12rem #00b3ff;
   animation: lightbar 5s linear infinite;
   z-index: 2;
-} */
+}
+
+@keyframes lightbar {
+  0% {
+    transform: scaleY(0) translateX(0);
+  }
+  10% {
+    transform: scaleY(1) translateX(0);
+  }
+  90% {
+    transform: scaleY(1) translateX(calc(600px - 10px));
+  }
+  100% {
+    transform: scaleY(0) translateX(calc(600px - 10px));
+  }
+}
+
+.toplayer {
+  position: absolute;
+  top: -50%;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  /*background: #061b31;*/
+  animation: toplayer 10s linear infinite;
+}
+
+@keyframes toplayer {
+  5% {
+    transform: translateX(0);
+  }
+  45%,
+  50% {
+    transform: translateX(100%);
+  }
+  50.001%,
+  55% {
+    transform: translateX(-100%);
+  }
+  95% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes car1 {
+  0% {
+    transform: translateX(0px);
+  }
+  90%,
+  100% {
+    transform: translateX(calc(100vw + 200px));
+  }
+}
+
+@keyframes car2 {
+  0% {
+    transform: translateX(0px) rotateY(180deg);
+  }
+  90%,
+  100% {
+    transform: translateX(calc(-100vw - 200px)) rotateY(180deg);
+  }
+}
