--- a/WAP/W3D2/express-routes/views/add-user.html
+++ b/WAP/W3D2/express-routes/views/add-user.html
@@ -8,16 +8,17 @@
   <body>
     <header>
       <ul>
-        <li><a href="add-user.html">Add user</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </header>
     <main>
       <form action="/add-user" method="POST">
-        Username: <input type="text" name="username" id="username" /><br />
-        <input type="text" name="password" id="password" /><br />
-        password: <input type="number" name="age" id="age" /><br />
-        <button type="button">Add user</button>
+        Username:
+        <input type="text" name="username" id="username" /><br /><br />
+        password:
+        <input type="text" name="password" id="password" /><br /><br />
+        Age: <input type="number" name="age" id="age" /><br /><br />
+        <button type="submit">Add user</button>
       </form>
     </main>
   </body>
