--- a/WAP/W3D2/express-routes/views/login.html
+++ b/WAP/W3D2/express-routes/views/login.html
@@ -16,7 +16,7 @@
       <form action="/login" method="POST">
         Username: <input type="text" name="username" id="username" /><br />
         password: <input type="text" name="password" id="password" /><br />
-        <button type="button">Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </main>
   </body>
