--- a/WAP/W3D2/express-routes/views/home-page.html
+++ b/WAP/W3D2/express-routes/views/home-page.html
@@ -13,6 +13,7 @@
     </header>
     <main>
       <h1>Welcome " Home " Page</h1>
+      <div id="div--user"></div>
     </main>
   </body>
 </html>
