--- a/WAP/W3D2/express-routes/views/add-user.html
+++ b/WAP/W3D2/express-routes/views/add-user.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home-page.html">Home</a></li>
       </ul>
     </header>
     <main>
