--- a/WAP/W3D2/express-routes/views/login.html
+++ b/WAP/W3D2/express-routes/views/login.html
@@ -9,7 +9,7 @@
     <header>
       <ul>
         <li><a href="login.html">Add user</a></li>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home-page.html">Home</a></li>
       </ul>
     </header>
     <main>
