--- a/WAP/W3D2/express-routes/views/login.html
+++ b/WAP/W3D2/express-routes/views/login.html
@@ -8,14 +8,16 @@
   <body>
     <header>
       <ul>
-        <li><a href="/home-page.html">Home</a></li>
+        <li><a href="/">Home</a></li>
       </ul>
     </header>
     <main>
       <form action="/login" method="POST">
-        Username: <input type="text" name="username" id="username" /><br />
-        password: <input type="text" name="password" id="password" /><br />
-        <button type="submit">Submit</button>
+        Username:
+        <input type="text" name="username" id="username" /><br /><br />
+        password:
+        <input type="text" name="password" id="password" /><br /><br />
+        <button type="submit">Login</button>
       </form>
     </main>
   </body>
