--- a/WAP/W3D2/express-routes/views/add-user.html
+++ b/WAP/W3D2/express-routes/views/add-user.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <ul>
-        <li><a href="/home-page.html">Home</a></li>
+        <li><a href="/">Home</a></li>
       </ul>
     </header>
     <main>
@@ -17,7 +17,7 @@
         <input type="text" name="username" id="username" /><br /><br />
         password:
         <input type="text" name="password" id="password" /><br /><br />
-        Age: <input type="number" name="age" id="age" /><br /><br />
+        Role: <input type="text" name="role" id="role" /><br /><br />
         <button type="submit">Add user</button>
       </form>
     </main>
