--- a/WAP/W3D2/express-routes/views/home-page.html
+++ b/WAP/W3D2/express-routes/views/home-page.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-      <!-- <ul>
-        <li><a href="/login.html">Login</a></li>
-      </ul> -->
+      <ul>
+        <li><a href="/login">Login</a></li>
+      </ul>
     </header>
     <main>
       <h1>Welcome " Home " Page</h1>
