Handling Routing in Express

--- a/WAP/W3D2/express-routes/views/home-page.html
+++ b/WAP/W3D2/express-routes/views/home-page.html
@@ -9,6 +9,7 @@
     <header>
       <ul>
         <li><a href="/login">Login</a></li>
+        <li><a href="/add-fruits">Add Fruits</a></li>
       </ul>
     </header>
     <main>
