--- a/WAP/W3D2/express-routes-cookies/views/home-page.ejs
+++ b/WAP/W3D2/express-routes-cookies/views/home-page.ejs
@@ -14,7 +14,17 @@
     </header>
     <main>
       <h1>Welcome " Home " Page</h1>
-      <div id="div--user"></div>
+      <% if (users.length > 0) { %>
+      <div id="div--user">
+        <h3>List of users in the system</h3>
+        <% for (let user of users) { %>
+
+        <li><%= user.username %> <% } %></li>
+      </div>
+
+      <% } else { %>
+      <h1>No user found</h1>
+      <% } %>
     </main>
   </body>
 </html>
