--- a/WAP/W3D2/express-routes-cookies/views/add-fruits.ejs
+++ b/WAP/W3D2/express-routes-cookies/views/add-fruits.ejs
@@ -6,11 +6,18 @@
     <title><%= pageTitle %></title>
   </head>
   <body>
-    <h1>Fruits</h1>
-    <form action="/add-fruits" method="POST">
-      Fruits:
-      <input type="text" name="fruit" id="fruit" /><br /><br />
-      <button type="submit">[Add Fruit]</button>
-    </form>
+    <header>
+      <ul>
+        <li><a href="/">Home</a></li>
+      </ul>
+    </header>
+    <main>
+      <h1>Fruits</h1>
+      <form action="/add-fruits" method="POST">
+        Fruits:
+        <input type="text" name="fruit" id="fruit" /><br /><br />
+        <button type="submit">[Add Fruit]</button>
+      </form>
+    </main>
   </body>
 </html>
