--- a/WAP/W3D2/express-routes-cookies/views/add-user.ejs
+++ b/WAP/W3D2/express-routes-cookies/views/add-user.ejs
@@ -14,10 +14,15 @@
     <main>
       <form action="/add-user" method="POST">
         Username:
-        <input type="text" name="username" id="username" /><br /><br />
+        <input type="text" name="username" id="username" required /><br /><br />
         password:
-        <input type="text" name="password" id="password" /><br /><br />
-        Role: <input type="text" name="role" id="role" /><br /><br />
+        <input type="text" name="password" id="password" required /><br /><br />
+        Role:
+        <select name="role" id="role" row="4">
+          <option selected="admin" value="admin">Admin</option>
+          <option value="user">User</option>
+        </select>
+        <br /><br />
         <button type="submit">Add user</button>
       </form>
     </main>
