--- a/WAP/W3D2/express-routes-cookies/views/home-page.ejs
+++ b/WAP/W3D2/express-routes-cookies/views/home-page.ejs
@@ -3,13 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      .main-nav ul {
+        display: flex;
+        list-style: none;
+        align-content: space-between;
+        gap: 1rem;
+      }
+      .main-nav ul li a {
+        text-decoration: none;
+        display: inline-block;
+        border: 0.1rem solid #333;
+        padding: 0.1rem;
+      }
+    </style>
     <title><% pageTitle %></title>
   </head>
   <body>
-    <header>
+    <header class="main-nav">
       <ul>
         <li><a href="/login">Login</a></li>
         <li><a href="/add-fruits">Add Fruits</a></li>
+        <% if (isAuthenticated) {%>
+        <li class="logged-in__admin"><a href="/add-user">Add user</a></li>
+        <% } %>
       </ul>
     </header>
     <main>
