--- a/WAP/W3D2/express-routes-cookies/views/login.ejs
+++ b/WAP/W3D2/express-routes-cookies/views/login.ejs
@@ -17,6 +17,10 @@
         <input type="text" name="username" id="username" /><br /><br />
         password:
         <input type="text" name="password" id="password" /><br /><br />
+        Remember me:
+        <input type="checkbox" checked name="remember" value="remember" />
+        <br />
+        <br />
         <button type="submit">Login</button>
       </form>
     </main>
